@@ -1798,6 +1798,7 @@ run(struct ofproto *ofproto_)
 {
     struct ofproto_dpif *ofproto = ofproto_dpif_cast(ofproto_);
     uint64_t new_seq, new_dump_seq;
+    bool is_connected;
 
     if (mbridge_need_revalidate(ofproto->mbridge)) {
         ofproto->backer->need_revalidate = REV_RECONFIGURE;
@@ -1864,6 +1865,15 @@ run(struct ofproto *ofproto_)
 
     if (mcast_snooping_run(ofproto->ms)) {
         ofproto->backer->need_revalidate = REV_MCAST_SNOOPING;
+    }
+
+    /* Check if controller connection is toggled. */
+    is_connected = ofproto_is_alive(&ofproto->up);
+    if (ofproto->is_controller_connected != is_connected) {
+        ofproto->is_controller_connected = is_connected;
+        /* Trigger revalidation as fast failover group monitoring
+         * controller port may need to check liveness again. */
+        ofproto->backer->need_revalidate = REV_RECONFIGURE;
     }
 
     new_dump_seq = seq_read(udpif_dump_seq(ofproto->backer->udpif));
