@@ -1,6 +1,13 @@
 Post-v2.13.0
 ---------------------
    - ovs-vswitchd no longer deletes datapath flows on exit by default.
+   - OpenFlow:
+     * The OpenFlow ofp_desc/serial_num may now be configured by setting the
+       value of other-config:dp-sn in the Bridge table.
+     * Added support to watch CONTROLLER port status in fast failover group.
+   - DPDK:
+     * Deprecated DPDK pdump packet capture support removed.
+     * Deprecated DPDK ring ports (dpdkr) are no longer supported.
 
 
 v2.13.0 - xx xxx xxxx
